--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/src/views/DesignEditor/components/Navbar/avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chỉnh ảnh Ezpics</title>
+    <script type="text/javascript">
+      if(location.port != 5173){
+        window.location = 'http://ezpics.vn:5173/';
+      }
+    </script>
   </head>
-  <body style="margin: 0">
+  <body style="margin: 0;overflow-x: hidden;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
