--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/views/DesignEditor/components/Navbar/avatar.png" />
+    <link rel="stylesheet" href="./styleAuto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chỉnh ảnh Ezpics</title>
     <script type="text/javascript">
