--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <title>Chỉnh ảnh Ezpics</title>
     <script type="text/javascript">
       if (location.port != 5173) {
-        window.location = 'http://ezpics.vn:5173/';
+        //window.location = 'http://ezpics.vn:5173/';
       }
     </script>
   </head>
