--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/src/views/DesignEditor/components/Navbar/avatar.png" />
     <link rel="stylesheet" href="./styleAuto.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chỉnh ảnh Ezpics</title>
+    <title>Ezpics - Công cụ thiết kế hình ảnh siêu tốc</title>
     <script type="text/javascript">
-      if (location.port != 5173) {
-        //window.location = 'http://ezpics.vn:5173/';
+      if (location.port != 80) {
+        window.location = 'http://ezpics.vn/';
       }
     </script>
   </head>
