--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ezpics - Công cụ thiết kế hình ảnh siêu tốc</title>
     <script type="text/javascript">
       if (location.port != 80) {
-        window.location = 'http://ezpics.vn/';
+        //window.location = 'http://ezpics.vn/';
       }
     </script>
   </head>
