--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     
 
     <script type="text/javascript">
-      if (location.port != 80) {
-        //window.location = 'http://ezpics.vn/';
+      if (location.port == 443) {
+        window.location = 'http://ezpics.vn/';
       }
     </script>
   </head>
