--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <script type="text/javascript">
       if (location.port == 443) {
-        window.location = 'http://ezpics.vn/';
+        //window.location = 'http://ezpics.vn/';
       }
     </script>
   </head>
