--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     </script>
   </head>
   <body style="margin: 0;overflow-x: hidden;">
-    <div id="root"></div>
+    <div id="root">
+      <center><img src="https://i.pinimg.com/originals/ca/89/fb/ca89fbce5e5c68f46d5330946c58ddc6.gif"></center>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
