--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <meta name="twitter:image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg">
 
     
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.10.1/www/src/brython.js"></script>
 
     <script type="text/javascript">
       if (location.port == 443) {
