--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
         //window.location = 'http://ezpics.vn/';
       }
     </script>
+
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VWCLW8G32B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VWCLW8G32B');
+    </script>
+
   </head>
   <body style="margin: 0;overflow-x: hidden;">
     <div id="root">
