--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
       }
     </script>
 
-    
-    <!-- Google tag (gtag.js) -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-PCQ02R5K9G');
+    </script>
+
+    <!-- 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VWCLW8G32B"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -59,7 +66,7 @@
 
       gtag('config', 'G-VWCLW8G32B');
     </script>
-
+    -->
   </head>
   <body style="margin: 0;overflow-x: hidden;">
     <div id="root">
