--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
       gtag('config', 'G-PCQ02R5K9G');
     </script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16458461093">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-16458461093');
+    </script>
+
     <!-- 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VWCLW8G32B"></script>
     <script>
