--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến" />
-    <meta name="keywords" content="công cụ thiết kế hình ảnh" />
+    <meta name="description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến" data-react-helmet="true" />
+    <meta name="keywords" content="công cụ thiết kế hình ảnh" data-react-helmet="true"/>
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc">
-    <meta itemprop="description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến">
-    <meta itemprop="image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg">
+    <meta itemprop="name" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc" data-react-helmet="true">
+    <meta itemprop="description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến" data-react-helmet="true">
+    <meta itemprop="image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg" data-react-helmet="true">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:title" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc"/>
+    <meta property="og:title" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc" data-react-helmet="true"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến"/>
+    <meta property="og:description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến" data-react-helmet="true"/>
     <meta property="og:url" content="/"/>
-    <meta property="og:site_name" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc"/>
-    <meta property="og:image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg" />
-    <meta property="og:image:alt" content="Hình ảnh Ezpics - Công cụ thiết kế hình ảnh siêu tốc" />
+    <meta property="og:site_name" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc" data-react-helmet="true"/>
+    <meta property="og:image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg" data-react-helmet="true"/>
+    <meta property="og:image:alt" content="Hình ảnh Ezpics - Công cụ thiết kế hình ảnh siêu tốc" data-react-helmet="true"/>
     <meta property="fb:admins" content="" />
     <meta property="fb:app_id" content="1695746487308818" /> 
     <meta property="og:image:width" content="900" />
@@ -36,9 +36,9 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc">
-    <meta name="twitter:description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến">
-    <meta name="twitter:image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg">
+    <meta name="twitter:title" content="Ezpics - Công cụ thiết kế hình ảnh siêu tốc" data-react-helmet="true">
+    <meta name="twitter:description" content="EZPICS là công cụ thiết kế hình ảnh siêu tốc với hơn 10.000 mẫu thiết kế sẵn có, hỗ trợ công cụ xóa ảnh nền như Canva, phù hợp với dân marketing, bán hàng online, kinh doanh hệ thống, đào tạo trực tuyến" data-react-helmet="true">
+    <meta name="twitter:image" content="https://admin.ezpics.vn/upload/admin/files/1587a9df872656780f37.jpg" data-react-helmet="true">
 
     
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.10.1/www/src/brython.js"></script>
