--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <style>
   /* CSS cho modal */
   .modal {
-    display: none; /* Ẩn modal mặc định */
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -128,16 +128,6 @@
       gtag('config', 'AW-16458461093');
     </script>
 
-    <!-- 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VWCLW8G32B"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-VWCLW8G32B');
-    </script>
-    -->
   </head>
   <body style="margin: 0;overflow-x: hidden;">
     <div id="root">
