--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body.modal-open #root {
       if (location.port == 443) {
       }
     </script>
-    <script>
+    <!-- <script>
       function displayWindowSize() {
         // Get width and height of the window excluding scrollbars
         
@@ -211,12 +211,14 @@ body.modal-open #root {
       window.addEventListener("resize", displayWindowSize);
 
       displayWindowSize();
-    </script>
-    <script>
+    </script> -->
+    <!-- <script>
             function openModalMobile() {
                 var modalMobile = document.getElementById("modalMobile");
               var body = document.querySelector("body");
-                if (modalMobile) {
+              var path = window.location.pathname;
+                if (modalMobile &&
+                path !== "/printed-image") {
                   // Lấy chiều rộng màn hình
                   const screenWidth = window.screen.width;
 
@@ -235,7 +237,7 @@ body.modal-open #root {
 
               window.addEventListener("load", openModalMobile);
               openModalMobile();
-    </script>
+    </script> -->
 
     <script>
       window.dataLayer = window.dataLayer || [];
