--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@ body.modal-open #root {
       window.addEventListener("resize", displayWindowSize);
 
       displayWindowSize();
-    </script> <script>
+    </script> 
+    <!-- <script>
             function openModalMobile() {
                 var modalMobile = document.getElementById("modalMobile");
               var body = document.querySelector("body");
@@ -236,7 +237,7 @@ body.modal-open #root {
 
               window.addEventListener("load", openModalMobile);
               openModalMobile();
-    </script> 
+    </script>  -->
 
     <script>
       window.dataLayer = window.dataLayer || [];
