--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@ body.modal-open #root {
 
               window.addEventListener("load", openModalMobile);
               openModalMobile();
-    </script>  -->
+    </script> 
+   -->
 
     <script>
       window.dataLayer = window.dataLayer || [];
